--- a/index.html
+++ b/index.html
@@ -8,515 +8,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500;9..144,700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      color-scheme: light;
-      --font-display: "Fraunces", serif;
-      --font-body: "Space Grotesk", sans-serif;
-      --navy: #0f1c3f;
-      --navy-strong: #132750;
-      --aqua: #24b4a3;
-      --mint: #bff1e3;
-      --sunrise: #f6c07a;
-      --bg: #f7f3ea;
-      --surface: #ffffff;
-      --surface-alt: #f1efe8;
-      --text: #0f1c3f;
-      --muted: #475569;
-      --border: rgba(15, 28, 63, 0.15);
-      --shadow: 0 22px 40px rgba(15, 28, 63, 0.12);
-      --accent: #1f4d8c;
-      --accent-strong: #153560;
-      --radius-lg: 24px;
-      --radius-md: 16px;
-      --radius-sm: 12px;
-      --transition: 200ms ease;
-    }
-
-    [data-theme="dark"] {
-      color-scheme: dark;
-      --bg: #0a1122;
-      --surface: #131c34;
-      --surface-alt: #0f192e;
-      --text: #f7f9ff;
-      --muted: #c2c9da;
-      --border: rgba(247, 249, 255, 0.15);
-      --shadow: 0 24px 40px rgba(0, 0, 0, 0.4);
-      --accent: #5fa3ff;
-      --accent-strong: #3d7fe0;
-      --sunrise: #f2b266;
-      --mint: #6ee7d5;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: var(--font-body);
-      background: var(--bg);
-      color: var(--text);
-      min-height: 100vh;
-    }
-
-    .page {
-      position: relative;
-      overflow: hidden;
-      padding: 32px clamp(20px, 4vw, 60px) 48px;
-    }
-
-    .page::before,
-    .page::after {
-      content: "";
-      position: absolute;
-      inset: auto;
-      width: 420px;
-      height: 420px;
-      border-radius: 50%;
-      filter: blur(0);
-      pointer-events: none;
-      z-index: 0;
-      opacity: 0.5;
-      background: radial-gradient(circle at center, var(--mint), transparent 70%);
-    }
-
-    .page::before {
-      top: -120px;
-      right: -120px;
-    }
-
-    .page::after {
-      bottom: -160px;
-      left: -140px;
-      background: radial-gradient(circle at center, var(--sunrise), transparent 68%);
-      opacity: 0.35;
-    }
-
-    .page > * {
-      position: relative;
-      z-index: 1;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    img {
-      max-width: 100%;
-      display: block;
-    }
-
-    .site-header {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 24px;
-      justify-content: space-between;
-      padding: 16px 0 32px;
-    }
-
-    .brand {
-      display: flex;
-      gap: 16px;
-      align-items: center;
-    }
-
-    .logo {
-      display: grid;
-      place-items: center;
-      width: 56px;
-      height: 56px;
-      border-radius: 18px;
-      background: linear-gradient(135deg, var(--navy), var(--accent));
-      color: #fff;
-      font-weight: 700;
-      letter-spacing: 1px;
-    }
-
-    .eyebrow {
-      text-transform: uppercase;
-      font-size: 12px;
-      letter-spacing: 2px;
-      color: var(--muted);
-      margin: 0 0 6px;
-    }
-
-    h1 {
-      font-family: var(--font-display);
-      font-size: clamp(32px, 5vw, 48px);
-      margin: 0;
-    }
-
-    .subtitle {
-      margin: 8px 0 0;
-      color: var(--muted);
-      max-width: 540px;
-    }
-
-    .header-actions {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      gap: 12px;
-    }
-
-    .status-pill {
-      padding: 8px 14px;
-      border-radius: 999px;
-      background: var(--surface);
-      border: 1px solid var(--border);
-      font-size: 13px;
-      color: var(--text);
-      box-shadow: var(--shadow);
-    }
-
-    .theme-toggle {
-      border: 1px solid var(--border);
-      background: var(--surface);
-      padding: 10px 16px;
-      border-radius: 999px;
-      font-weight: 600;
-      color: var(--text);
-      cursor: pointer;
-      transition: transform var(--transition), box-shadow var(--transition);
-    }
-
-    .theme-toggle:hover {
-      transform: translateY(-1px);
-      box-shadow: var(--shadow);
-    }
-
-    .hero {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 32px;
-      align-items: start;
-      padding-bottom: 36px;
-    }
-
-    .hero h2 {
-      font-family: var(--font-display);
-      font-size: clamp(26px, 4vw, 36px);
-      margin: 0 0 14px;
-    }
-
-    .lead {
-      font-size: 18px;
-      line-height: 1.6;
-      color: var(--muted);
-      margin: 0 0 20px;
-    }
-
-    .hero-meta {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 16px;
-      margin-bottom: 20px;
-    }
-
-    .meta-card {
-      padding: 16px;
-      border-radius: var(--radius-md);
-      background: var(--surface);
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow);
-    }
-
-    .meta-card strong {
-      display: block;
-      font-size: 22px;
-      margin-bottom: 4px;
-    }
-
-    .cta-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-    }
-
-    .btn {
-      border-radius: 999px;
-      padding: 10px 18px;
-      border: 1px solid var(--border);
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform var(--transition), box-shadow var(--transition), background var(--transition);
-    }
-
-    .btn.primary {
-      background: var(--accent);
-      color: #fff;
-      border-color: transparent;
-    }
-
-    .btn.primary:hover {
-      background: var(--accent-strong);
-      transform: translateY(-1px);
-      box-shadow: var(--shadow);
-    }
-
-    .btn.ghost {
-      background: transparent;
-      color: var(--text);
-    }
-
-    .btn.ghost:hover {
-      background: var(--surface);
-    }
-
-    .profile-stack {
-      display: grid;
-      gap: 16px;
-    }
-
-    .card {
-      padding: 18px;
-      border-radius: var(--radius-md);
-      background: var(--surface);
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow);
-    }
-
-    .card h3 {
-      margin-top: 0;
-      margin-bottom: 10px;
-      font-size: 18px;
-    }
-
-    .tag-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .tag-list li {
-      padding: 6px 12px;
-      border-radius: 999px;
-      background: var(--surface-alt);
-      border: 1px solid var(--border);
-      font-size: 13px;
-    }
-
-    .signal-card {
-      background: linear-gradient(135deg, var(--navy), var(--accent));
-      color: #fff;
-      border: none;
-    }
-
-    .signal-card p {
-      margin: 0;
-      color: rgba(255, 255, 255, 0.85);
-    }
-
-    .tabs {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-      padding: 18px;
-      border-radius: var(--radius-lg);
-      background: var(--surface);
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow);
-      margin: 20px 0 30px;
-    }
-
-    .tab {
-      border-radius: 999px;
-      border: 1px solid var(--border);
-      background: transparent;
-      padding: 10px 16px;
-      font-weight: 600;
-      cursor: pointer;
-      color: var(--text);
-      transition: background var(--transition), color var(--transition), transform var(--transition);
-    }
-
-    .tab[aria-selected="true"] {
-      background: var(--accent);
-      color: #fff;
-      border-color: transparent;
-      transform: translateY(-1px);
-      box-shadow: var(--shadow);
-    }
-
-    .tab-panel {
-      display: grid;
-      gap: 20px;
-      animation: panelFade 0.3s ease;
-    }
-
-    .tab-panel[hidden] {
-      display: none;
-    }
-
-    .panel-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-    }
-
-    .list {
-      margin: 0;
-      padding-left: 18px;
-      color: var(--muted);
-      line-height: 1.6;
-    }
-
-    .projects-grid {
-      display: grid;
-      gap: 18px;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    }
-
-    .project-card h4 {
-      margin: 0 0 8px;
-      font-size: 18px;
-    }
-
-    .project-meta {
-      font-size: 13px;
-      color: var(--muted);
-      margin-bottom: 12px;
-    }
-
-    .timeline {
-      display: grid;
-      gap: 16px;
-    }
-
-    .timeline-item {
-      padding: 16px;
-      border-radius: var(--radius-md);
-      border: 1px solid var(--border);
-      background: var(--surface);
-      box-shadow: var(--shadow);
-    }
-
-    .timeline-item span {
-      font-size: 13px;
-      color: var(--muted);
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    .contact-grid {
-      display: grid;
-      gap: 20px;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      align-items: start;
-    }
-
-    .contact-list {
-      display: grid;
-      gap: 12px;
-    }
-
-    .contact-item {
-      padding: 12px 16px;
-      border-radius: var(--radius-sm);
-      border: 1px solid var(--border);
-      background: var(--surface);
-    }
-
-    form {
-      display: grid;
-      gap: 12px;
-    }
-
-    label {
-      font-size: 13px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      color: var(--muted);
-    }
-
-    input,
-    textarea {
-      width: 100%;
-      padding: 10px 12px;
-      border-radius: var(--radius-sm);
-      border: 1px solid var(--border);
-      background: var(--surface);
-      font-family: var(--font-body);
-      color: var(--text);
-    }
-
-    textarea {
-      min-height: 120px;
-      resize: vertical;
-    }
-
-    .footer {
-      margin-top: 40px;
-      border-top: 1px solid var(--border);
-      padding-top: 20px;
-      color: var(--muted);
-      font-size: 14px;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 12px;
-    }
-
-    .reveal {
-      animation: fadeUp 0.6s ease both;
-      animation-delay: var(--delay, 0ms);
-    }
-
-    @keyframes fadeUp {
-      from {
-        opacity: 0;
-        transform: translateY(14px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes panelFade {
-      from {
-        opacity: 0;
-        transform: translateY(8px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @media (max-width: 720px) {
-      .header-actions {
-        align-items: flex-start;
-      }
-
-      .status-pill {
-        width: 100%;
-      }
-
-      .tabs {
-        padding: 12px;
-      }
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      .reveal,
-      .tab-panel {
-        animation: none;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
   <div class="page">
     <header class="site-header reveal" style="--delay: 60ms;">
       <div class="brand">
-        <div class="logo">MB</div>
+        <div class="logo">MK</div>
         <div>
           <p class="eyebrow">Junior Developer Portfolio</p>
           <h1>Martti Koivisto</h1>
@@ -592,6 +90,9 @@
       </button>
       <button class="tab" type="button" role="tab" aria-selected="false" aria-controls="panel-education" id="tab-education" data-tab="education">
         Education
+      </button>
+      <button class="tab" type="button" role="tab" aria-selected="false" aria-controls="panel-certificates" id="tab-certificates" data-tab="certificates">
+        Certificates
       </button>
       <button class="tab" type="button" role="tab" aria-selected="false" aria-controls="panel-contact" id="tab-contact" data-tab="contact">
         Contact me
@@ -703,6 +204,47 @@
         </div>
       </section>
 
+      <section class="tab-panel" id="panel-certificates" role="tabpanel" aria-labelledby="tab-certificates" data-panel="certificates" hidden>
+        <div class="panel-grid">
+          <div class="card">
+            <h3>Frontend Performance Essentials</h3>
+            <p class="project-meta">Google Developers • 2024</p>
+            <p>
+              Hands-on labs focused on Core Web Vitals, bundle optimization, and building consistently fast interfaces.
+            </p>
+            <ul class="tag-list">
+              <li>Web Vitals</li>
+              <li>Lighthouse</li>
+              <li>Optimizations</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h3>Testing JavaScript Applications</h3>
+            <p class="project-meta">Open Source Academy • 2023</p>
+            <p>
+              Built a testing strategy with unit, integration, and end-to-end coverage using modern tooling and CI.
+            </p>
+            <ul class="tag-list">
+              <li>Jest</li>
+              <li>Playwright</li>
+              <li>Coverage</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h3>Cloud Foundations</h3>
+            <p class="project-meta">AWS Educate • 2023</p>
+            <p>
+              Covered deployment basics, infrastructure terminology, and monitoring patterns for modern web apps.
+            </p>
+            <ul class="tag-list">
+              <li>Deployments</li>
+              <li>Monitoring</li>
+              <li>Security</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
       <section class="tab-panel" id="panel-contact" role="tabpanel" aria-labelledby="tab-contact" data-panel="contact" hidden>
         <div class="contact-grid">
           <div class="contact-list">
@@ -715,7 +257,7 @@
             </div>
             <div class="contact-item">
               <strong>Email</strong>
-              <div>mark.browler@email.com</div>
+              <div>martti.koivisto@email.com</div>
             </div>
             <div class="contact-item">
               <strong>Location</strong>
@@ -723,7 +265,7 @@
             </div>
             <div class="contact-item">
               <strong>LinkedIn</strong>
-              <div>linkedin.com/in/markbrowler</div>
+              <div>linkedin.com/in/marttikoivisto</div>
             </div>
           </div>
           <div class="card" id="contact">
@@ -749,94 +291,11 @@
     </main>
 
     <footer class="footer">
-      <div>Designed and built by Mark Browler.</div>
+      <div>Designed and built by Martti Koivisto.</div>
       <div>Updated 2024. Built for GitHub Pages.</div>
     </footer>
   </div>
 
-  <script>
-    const root = document.documentElement;
-    const themeToggle = document.querySelector(".theme-toggle");
-    const themeLabel = document.querySelector(".theme-label");
-    const storedTheme = localStorage.getItem("theme");
-    const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-
-    function setTheme(mode) {
-      root.setAttribute("data-theme", mode);
-      localStorage.setItem("theme", mode);
-      themeLabel.textContent = "Theme: " + mode.charAt(0).toUpperCase() + mode.slice(1);
-      themeToggle.setAttribute("aria-pressed", mode === "dark");
-    }
-
-    setTheme(storedTheme || (prefersDark ? "dark" : "light"));
-
-    themeToggle.addEventListener("click", () => {
-      const next = root.getAttribute("data-theme") === "dark" ? "light" : "dark";
-      setTheme(next);
-    });
-
-    const tabs = Array.from(document.querySelectorAll("[role='tab']"));
-    const panels = Array.from(document.querySelectorAll("[role='tabpanel']"));
-    const tabLinks = Array.from(document.querySelectorAll("[data-tab-link]"));
-
-    function activateTab(name, setFocus, updateHash) {
-      tabs.forEach((tab) => {
-        const isActive = tab.dataset.tab === name;
-        tab.setAttribute("aria-selected", isActive);
-        tab.tabIndex = isActive ? 0 : -1;
-      });
-      panels.forEach((panel) => {
-        const isActive = panel.dataset.panel === name;
-        if (isActive) {
-          panel.removeAttribute("hidden");
-        } else {
-          panel.setAttribute("hidden", "true");
-        }
-      });
-      if (setFocus) {
-        const activeTab = tabs.find((tab) => tab.dataset.tab === name);
-        if (activeTab) {
-          activeTab.focus();
-        }
-      }
-      if (updateHash !== false && history.replaceState) {
-        history.replaceState(null, "", "#" + name);
-      }
-    }
-
-    const initialTab = window.location.hash.replace("#", "");
-    if (initialTab && tabs.some((tab) => tab.dataset.tab === initialTab)) {
-      activateTab(initialTab, false, false);
-    } else {
-      activateTab("about", false, false);
-    }
-
-    tabs.forEach((tab) => {
-      tab.addEventListener("click", () => {
-        activateTab(tab.dataset.tab, false, true);
-      });
-
-      tab.addEventListener("keydown", (event) => {
-        const currentIndex = tabs.indexOf(tab);
-        if (event.key === "ArrowRight" || event.key === "ArrowLeft") {
-          event.preventDefault();
-          const direction = event.key === "ArrowRight" ? 1 : -1;
-          const nextIndex = (currentIndex + direction + tabs.length) % tabs.length;
-          activateTab(tabs[nextIndex].dataset.tab, true, true);
-        }
-      });
-    });
-
-    tabLinks.forEach((link) => {
-      link.addEventListener("click", (event) => {
-        event.preventDefault();
-        activateTab(link.dataset.tabLink, true, true);
-        const panel = document.querySelector("[data-panel='" + link.dataset.tabLink + "']");
-        if (panel) {
-          panel.scrollIntoView({ behavior: "smooth", block: "start" });
-        }
-      });
-    });
-  </script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
