--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         <div class="card">
           <h3 data-i18n="stackFocus">Stack focus</h3>
           <ul class="tag-list">
-            <li>TypeScript</li>
-            <li>React</li>
-            <li>Node.js</li>
-            <li>PostgreSQL</li>
-            <li>Playwright</li>
-            <li>GitHub Actions</li>
+            <li>Go</li>
+            <li>SQLite</li>
+            <li>Three.js</li>
+            <li>C</li>
+            <li>Python</li>
+            <li>HTML/CSS</li>
           </ul>
         </div>
         <div class="card signal-card">
