Changed the coin back to mk

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="site-header reveal" style="--delay: 60ms;">
       <div class="brand">
         <div class="coin-mark" aria-hidden="true">
-          <div class="coin"><span>1mk.</span></div>
+          <div class="coin"><span>mk</span></div>
         </div>
         <div class="brand-text">
           <p class="eyebrow" data-i18n="eyebrow">markka.net</p>
