Added project descriptions and links to readme's

--- a/index.html
+++ b/index.html
@@ -183,27 +183,42 @@
             </ul>
           </article>
           <article class="card project-card">
-            <h4 data-i18n="projectTitle2">Go Service Sandbox</h4>
-            <p class="project-meta" data-i18n="projectMeta2">Backend • REST APIs • SQL</p>
+            <h4 data-i18n="projectTitle2">Fund-O-Matic</h4>
+            <p class="project-meta" data-i18n="projectMeta2">CS50x final project • Flask • SQLite</p>
             <p data-i18n="projectDesc2">
-              Peer-reviewed Go services with clean data models, query layers, and API contracts.
+              Web app to plan private-market fund commitments and forecast cashflows using simple investment phase logic.
             </p>
+            <a class="project-link" href="fund-o-matic/" data-i18n="projectLinkLabel">View site</a>
             <ul class="tag-list">
-              <li>Go</li>
-              <li>SQL</li>
-              <li>APIs</li>
+              <li>Python</li>
+              <li>Flask</li>
+              <li>Chart.js</li>
             </ul>
           </article>
           <article class="card project-card">
-            <h4 data-i18n="projectTitle3">Investment Workflow Automations</h4>
-            <p class="project-meta" data-i18n="projectMeta3">Python • Data workflows • Reporting</p>
+            <h4 data-i18n="projectTitle3">Literary Lions Forum</h4>
+            <p class="project-meta" data-i18n="projectMeta3">kood/Sisu • Go • SQLite</p>
             <p data-i18n="projectDesc3">
-              Created internal tools to speed up analysis and reporting for finance teams.
+              Full-stack discussion forum with posts, comments, reactions, search, and bcrypt authentication.
             </p>
+            <a class="project-link" href="literary-lions/" data-i18n="projectLinkLabel">View site</a>
             <ul class="tag-list">
-              <li>Python</li>
-              <li>Automation</li>
-              <li>Reporting</li>
+              <li>Go</li>
+              <li>SQLite</li>
+              <li>Docker</li>
+            </ul>
+          </article>
+          <article class="card project-card">
+            <h4 data-i18n="projectTitle4">Stations Pathfinder</h4>
+            <p class="project-meta" data-i18n="projectMeta4">kood/Sisu • CLI • Visualization</p>
+            <p data-i18n="projectDesc4">
+              Multi-train routing tool with BFS/DFS/Dijkstra/A* and PNG map rendering for solutions.
+            </p>
+            <a class="project-link" href="stations/" data-i18n="projectLinkLabel">View site</a>
+            <ul class="tag-list">
+              <li>Go</li>
+              <li>Algorithms</li>
+              <li>Image output</li>
             </ul>
           </article>
         </div>
