Added more projects, made the contact me -form functional, fixed some content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="hero-stats">
           <div class="stat-card">
             <strong>Top 8%</strong>
-            <span data-i18n="statLabel1">ranked in 2024 cohort</span>
+            <span data-i18n="statLabel1">ranked in my starting batch</span>
           </div>
           <div class="stat-card">
             <strong>2nd</strong>
@@ -171,6 +171,32 @@
         </div>
         <div class="projects-grid">
           <article class="card project-card">
+            <h4 data-i18n="projectTitle3">Literary Lions Forum</h4>
+            <p class="project-meta" data-i18n="projectMeta3">kood/Sisu • Go • SQLite</p>
+            <p data-i18n="projectDesc3">
+              Full-stack discussion forum with posts, comments, reactions, search, and bcrypt authentication.
+            </p>
+            <a class="project-link" href="literary-lions/" data-i18n="projectLinkLabel">View README</a>
+            <ul class="tag-list">
+              <li>Go</li>
+              <li>SQLite</li>
+              <li>Docker</li>
+            </ul>
+          </article>
+          <article class="card project-card">
+            <h4 data-i18n="projectTitle5">Portfolio website</h4>
+            <p class="project-meta" data-i18n="projectMeta5">markka.net • HTML/CSS/JS</p>
+            <p data-i18n="projectDesc5">
+              Static portfolio with theme + language toggles, tabbed navigation, and accessibility-first layout.
+            </p>
+            <a class="project-link" href="docs/" data-i18n="projectLinkLabel">View README</a>
+            <ul class="tag-list">
+              <li>GitHub Pages</li>
+              <li>ARIA</li>
+              <li>Animations</li>
+            </ul>
+          </article>
+          <article class="card project-card">
             <h4 data-i18n="projectTitle1">Documtec Search Insights</h4>
             <p class="project-meta" data-i18n="projectMeta1">Hackathon • Elasticsearch • Real-world data</p>
             <p data-i18n="projectDesc1">
@@ -183,42 +209,55 @@
             </ul>
           </article>
           <article class="card project-card">
+            <h4 data-i18n="projectTitle4">Stations Pathfinder</h4>
+            <p class="project-meta" data-i18n="projectMeta4">kood/Sisu • CLI • Visualization</p>
+            <p data-i18n="projectDesc4">
+              Multi-train routing tool with BFS, DFS, Dijkstra & A* algorithms and PNG map rendering for solutions.
+            </p>
+            <a class="project-link" href="stations/" data-i18n="projectLinkLabel">View README</a>
+            <ul class="tag-list">
+              <li>Go</li>
+              <li>Algorithms</li>
+              <li>Image output</li>
+            </ul>
+          </article>
+          <article class="card project-card">
+            <h4 data-i18n="projectTitle6">Raspberry Pi home server</h4>
+            <p class="project-meta" data-i18n="projectMeta6">Pi-hole • Networking</p>
+            <p data-i18n="projectDesc6">
+              Always-on DNS sinkhole with network-wide ad blocking and a web-based admin dashboard.
+            </p>
+            <a class="project-link" href="pi-hole/" data-i18n="projectLinkLabel">View README</a>
+            <ul class="tag-list">
+              <li>Raspberry Pi</li>
+              <li>DNS</li>
+              <li>Linux</li>
+            </ul>
+          </article>
+          <article class="card project-card">
+            <h4 data-i18n="projectTitle7">Cars viewer</h4>
+            <p class="project-meta" data-i18n="projectMeta7">Go • API integration</p>
+            <p data-i18n="projectDesc7">
+              Web interface that consumes an external cars API for browsing, comparing, and recommendations.
+            </p>
+            <a class="project-link" href="cars/" data-i18n="projectLinkLabel">View README</a>
+            <ul class="tag-list">
+              <li>Go</li>
+              <li>JSON</li>
+              <li>UI</li>
+            </ul>
+          </article>
+          <article class="card project-card">
             <h4 data-i18n="projectTitle2">Fund-O-Matic</h4>
             <p class="project-meta" data-i18n="projectMeta2">CS50x final project • Flask • SQLite</p>
             <p data-i18n="projectDesc2">
               Web app to plan private-market fund commitments and forecast cashflows using simple investment phase logic.
             </p>
-            <a class="project-link" href="fund-o-matic/" data-i18n="projectLinkLabel">View site</a>
+            <a class="project-link" href="fund-o-matic/" data-i18n="projectLinkLabel">View README</a>
             <ul class="tag-list">
               <li>Python</li>
               <li>Flask</li>
               <li>Chart.js</li>
-            </ul>
-          </article>
-          <article class="card project-card">
-            <h4 data-i18n="projectTitle3">Literary Lions Forum</h4>
-            <p class="project-meta" data-i18n="projectMeta3">kood/Sisu • Go • SQLite</p>
-            <p data-i18n="projectDesc3">
-              Full-stack discussion forum with posts, comments, reactions, search, and bcrypt authentication.
-            </p>
-            <a class="project-link" href="literary-lions/" data-i18n="projectLinkLabel">View site</a>
-            <ul class="tag-list">
-              <li>Go</li>
-              <li>SQLite</li>
-              <li>Docker</li>
-            </ul>
-          </article>
-          <article class="card project-card">
-            <h4 data-i18n="projectTitle4">Stations Pathfinder</h4>
-            <p class="project-meta" data-i18n="projectMeta4">kood/Sisu • CLI • Visualization</p>
-            <p data-i18n="projectDesc4">
-              Multi-train routing tool with BFS/DFS/Dijkstra/A* and PNG map rendering for solutions.
-            </p>
-            <a class="project-link" href="stations/" data-i18n="projectLinkLabel">View site</a>
-            <ul class="tag-list">
-              <li>Go</li>
-              <li>Algorithms</li>
-              <li>Image output</li>
             </ul>
           </article>
         </div>
@@ -264,7 +303,7 @@
               </div>
               <div class="timeline-item">
                 <span data-i18n="leadership3Meta">03/2018 – Present</span>
-                <h4 data-i18n="leadership3Title">Board Member — Are Oy</h4>
+                <h4 data-i18n="leadership3Title">Board Member — Are Oy & Conficap Oy</h4>
                 <p data-i18n="leadership3Body">
                   Participated in strategy, performance evaluation, and international expansion discussions.
                 </p>
@@ -323,25 +362,24 @@
               </p>
             </div>
             <div class="contact-item">
-              <strong data-i18n="contactEmailLabel">Email</strong>
-              <div>martti.koivisto@email.com</div>
-            </div>
-            <div class="contact-item">
               <strong data-i18n="contactLocationLabel">Location</strong>
               <div data-i18n="contactLocationValue">Helsinki, Finland (open to remote)</div>
             </div>
             <div class="contact-item">
               <strong data-i18n="contactLinkedInLabel">LinkedIn</strong>
-              <div>linkedin.com/in/marttikoivisto</div>
+              <div><a href="www.linkedin.com/in/marttikoivisto">linkedin.com/in/marttikoivisto</a></div>
             </div>
             <div class="contact-item">
               <strong data-i18n="contactWebsiteLabel">Website</strong>
-              <div>markka.net</div>
+              <div><a href="markka.net">markka.net</a></div>
             </div>
           </div>
           <div class="card" id="contact-form">
             <h3 data-i18n="contactFormHeading">Send a message</h3>
-            <form>
+            <form
+              action="https://formspree.io/f/mqeeegvl"
+              method="POST"
+            >
               <div>
                 <label for="name" data-i18n="contactNameLabel">Name</label>
                 <input id="name" type="text" name="name" placeholder="Your name" data-i18n-placeholder="contactNamePlaceholder" />
