--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
             <p data-i18n="aboutBody2">
               I apply rigorous reasoning to software development, with a growing focus on backend systems, data handling, and clean interfaces between components.
             </p>
+            <img
+              src="assets/img/martti-img.png"
+              alt="Portrait of Martti Koivisto"
+              class="about-photo"
+              width="1024"
+              height="1024"
+              loading="lazy"
+              decoding="async"
+            >
           </div>
           <div class="card">
             <h3 data-i18n="educationHeading">Education</h3>
