added https:// to external links

--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
             </div>
             <div class="contact-item">
               <strong data-i18n="contactLinkedInLabel">LinkedIn</strong>
-              <div><a href="www.linkedin.com/in/marttikoivisto">linkedin.com/in/marttikoivisto</a></div>
+              <div><a href="https://www.linkedin.com/in/marttikoivisto">linkedin.com/in/marttikoivisto</a></div>
             </div>
             <div class="contact-item">
               <strong data-i18n="contactWebsiteLabel">Website</strong>
-              <div><a href="markka.net">markka.net</a></div>
+              <div><a href="https://markka.net">markka.net</a></div>
             </div>
           </div>
           <div class="card" id="contact-form">
