Made stack snapshot clickable, fixed box placement and focused the stack snapshot

--- a/index.html
+++ b/index.html
@@ -87,13 +87,11 @@
         </div>
         <div class="card stack-card">
           <h3 data-i18n="stackFocusHeading">Stack snapshot</h3>
-          <ul class="tag-list">
-            <li>Go</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>SQL</li>
-            <li>REST APIs</li>
-            <li>Elasticsearch</li>
+          <ul class="tag-list stack-tags">
+            <li><a class="tag-link" href="#projects" data-tab-link="projects">Go</a></li>
+            <li><a class="tag-link" href="#projects" data-tab-link="projects">JavaScript</a></li>
+            <li><a class="tag-link" href="#projects" data-tab-link="projects">SQL</a></li>
+            <li><a class="tag-link" href="#projects" data-tab-link="projects">REST APIs</a></li>
           </ul>
         </div>
       </div>
